# rubiks-cube-cracker

./: CMakeLists.txt  README.md  TODO
Controller/: CubeSolver.cpp  CubeSolver.h  RubiksCubeController.cpp  RubiksCubeController.h
Controller/Command/Solver/: KorfCubeSolver.cpp  KorfCubeSolver.h
Controller/Searcher/: IDACubeSearcher.cpp  IDACubeSearcher.h  PatternDatabaseIndexer.cpp
Model/: RubiksCubeModel.cpp  RubiksCubeModel.h
Model/Goal/Korf/: ExactDatabaseGoal.cpp  ExactDatabaseGoal.h
Model/PatternDatabase/: PatternDatabase.cpp  PatternDatabase.h
Model/PatternDatabase/Korf/: CornerPatternDatabase.cpp  CornerPatternDatabase.h  EdgeG1PatternDatabase.cpp  EdgeG1PatternDatabase.h  EdgeG2PatternDatabase.cpp  EdgeG2PatternDatabase.h  EdgePatternDatabase.cpp  EdgePatternDatabase.h  ExactPatternDatabase.cpp  ExactPatternDatabase.h  KorfPatternDatabase.cpp  KorfPatternDatabase.h
View/: RubiksCubeWriter.cpp  RubiksCubeWriter.h
